--- a/admin/package.json
+++ b/admin/package.json
@@ -22,6 +22,8 @@
     "@mantine/core": "7.8.1",
     "@mantine/hooks": "7.8.1",
     "@next/bundle-analyzer": "^14.1.3",
+    "@prisma/client": "^5.13.0",
+    "@prisma/extension-accelerate": "^1.0.0",
     "@tabler/icons-react": "^3.0.0",
     "next": "14.1.3",
     "react": "18.2.0",
@@ -62,6 +64,7 @@
     "postcss-preset-mantine": "1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.2.5",
+    "prisma": "^5.13.0",
     "storybook": "^8.0.0",
     "storybook-dark-mode": "^3.0.3",
     "stylelint": "^16.2.1",
