--- a/admin/package.json
+++ b/admin/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "^5.13.0",
     "@prisma/extension-accelerate": "^1.0.0",
     "@tabler/icons-react": "^3.0.0",
+    "bcrypt": "^5.1.1",
     "next": "14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -42,6 +43,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.26",
     "@types/react": "18.2.65",
