--- a/admin/package.json
+++ b/admin/package.json
@@ -16,7 +16,8 @@
     "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
     "test": "npm run prettier:check && npm run lint && npm run typecheck && npm run jest",
     "storybook": "storybook dev -p 6006",
-    "storybook:build": "storybook build"
+    "storybook:build": "storybook build",
+    "graphql-codegen": "graphql-codegen"
   },
   "dependencies": {
     "@mantine/core": "7.8.1",
@@ -24,16 +25,22 @@
     "@next/bundle-analyzer": "^14.1.3",
     "@prisma/client": "^5.13.0",
     "@prisma/extension-accelerate": "^1.0.0",
+    "@shopify/shopify-api": "^10.0.0",
+    "@shopify/storefront-api-client": "^0.3.4",
     "@tabler/icons-react": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.2.0"
+    "react-icons": "^5.2.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@next/eslint-plugin-next": "^14.1.3",
+    "@shopify/api-codegen-preset": "^0.0.7",
     "@storybook/addon-essentials": "^8.0.0",
     "@storybook/addon-styling-webpack": "^0.0.6",
     "@storybook/blocks": "^8.0.0",
