--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "dev": "cd core && next dev & cd admin && next dev",
     "start": "cd core && next start & cd admin && next start"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react-icons": "^5.2.1"
+  }
 }
